Fix sort button width and text align

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,6 +73,8 @@
 	right: -350px;
 	margin-top: 40px;
 	background-color: #215184 !important;
+	width: 149px;
+	text-align: left !important;
 }
 
 .img {
